# Vision-Based-Desktop-Automation

./: .gitignore  README.md  generate_proofs.py  main.py  pyproject.toml
src/: api.py  bot.py  detector.py
